refactor: Rename config.py

--- a/info.plist
+++ b/info.plist
@@ -654,7 +654,7 @@
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
-				<string>Customization.py</string>
+				<string>Config.py</string>
 				<key>subtext</key>
 				<string></string>
 				<key>title</key>
